# candle-lancedb-imagesearch-demo

./: Cargo.toml  README.md
src/: main.rs
